# StayAwake

./: .gitignore  README.md  pyproject.toml  requirements.txt
StayAwake/: StayAwake.py  StayAwake.ui  images.qrc  images_qr.py  main.py  requirements.txt
StayAwake/StayAwakeVenv/: pyvenv.cfg
StayAwake/StayAwakeVenv/Scripts/: activate  activate.bat
stayawake/: interface.py  main.py
